--- a/Temas_acustica/Cuerpo_elastico.html
+++ b/Temas_acustica/Cuerpo_elastico.html
@@ -38,7 +38,6 @@
             font-size: 36px;
             padding: 10px 0;
         }
-
     </style>
 </head>
 
@@ -52,6 +51,47 @@
         <a href="\Calculadora.html">Calculadora</a>
     </div>
     <div id="cuerpo">Cuerpo elástico</div>
+    <div>
+        <h2>Cuerpos Elásticos</h2>
+        <p>La elasticidad es un concepto fundamental en la física que describe la capacidad de un material o sustancia
+            para deformarse bajo una fuerza externa y luego regresar a su forma original. Esta propiedad es crucial para
+            la funcionalidad de diversos materiales y estructuras en diferentes industrias, desde la construcción hasta
+            la ingeniería aeroespacial. Este ensayo explorará las propiedades de los cuerpos elásticos, las fuerzas que
+            actúan sobre ellos y sus aplicaciones en varios campos.</p>
+
+        <h2>Propiedades de los Cuerpos Elásticos</h2>
+        <p>Los cuerpos elásticos son materiales o sustancias que tienen la capacidad de deformarse bajo la influencia de
+            una fuerza externa y luego regresar a su forma original. La elasticidad de un material depende de su
+            estructura molecular y de las fuerzas que mantienen unidos sus átomos. Los materiales elásticos tienen
+            enlaces fuertes y flexibles que les permiten estirarse y comprimirse sin romperse. Cuando se aplica una
+            fuerza a un cuerpo elástico, las fuerzas internas dentro del material se reorganizan y actúan en dirección
+            opuesta a la fuerza externa, generando una resistencia que intenta restaurar la forma original del cuerpo.
+        </p>
+        <p>La ley de Hooke es un principio fundamental en la física de los cuerpos elásticos, donde la fuerza requerida
+            para deformar un cuerpo elástico es directamente proporcional a la magnitud de la deformación. Este
+            principio se utiliza ampliamente en ingeniería y física para describir el comportamiento de los materiales
+            elásticos bajo diferentes condiciones.</p>
+
+        <h2>Fuerzas que Actúan sobre los Cuerpos Elásticos</h2>
+        <p>Las fuerzas que actúan sobre los cuerpos elásticos son cruciales para comprender su comportamiento y
+            aplicaciones. La fuerza es la causa que puede modificar el estado de reposo o movimiento de un cuerpo. La
+            elasticidad de un material juega un papel crucial en su capacidad para deformarse y regresar a su forma
+            original, lo que lo convierte en un elemento esencial en varias aplicaciones industriales y cotidianas.</p>
+        <p>La elasticidad de un material se determina por su capacidad para resistir la deformación bajo una fuerza
+            externa. Cuanto mayor sea la elasticidad de un material, mayor será su capacidad para resistir la
+            deformación y regresar a su forma original. Esta propiedad es crucial para la funcionalidad de diversos
+            materiales y estructuras, desde resortes y bandas de goma hasta puentes y edificios.</p>
+
+        <h2>Aplicaciones de los Cuerpos Elásticos</h2>
+        <p>Los cuerpos elásticos tienen numerosas aplicaciones en diversos campos, desde la ingeniería hasta la
+            biología. En ingeniería, los cuerpos elásticos se utilizan en el diseño y construcción de diversas
+            estructuras, como puentes, edificios y vehículos. La elasticidad de los materiales es crucial para su
+            capacidad para soportar diferentes cargas y tensiones, garantizando la seguridad y durabilidad de las
+            estructuras.</p>
+        <p>En biología, los cuerpos elásticos se utilizan en el estudio de la mecánica de los organismos vivos, como
+            músculos, huesos y tendones. La elasticidad de estos tejidos juega un papel crucial en su capacidad para
+            funcionar correctamente, desde el movimiento y la locomoción hasta el crecimiento y desarrollo.</p>
+    </div>
 
     <script>
         function redirigir(ruta) {
