--- a/Temas_acustica/Deformacion.html
+++ b/Temas_acustica/Deformacion.html
@@ -38,7 +38,6 @@
             font-size: 36px;
             padding: 10px 0;
         }
-
     </style>
 </head>
 
@@ -52,6 +51,29 @@
         <a href="\Calculadora.html">Calculadora</a>
     </div>
     <div id="deformacion">Deformación</div>
+    <div>
+        <h2>Deformación</h2>
+        <p>La deformación es un concepto fundamental en la física que describe el cambio en la forma o tamaño de un
+            objeto debido a la aplicación de fuerzas externas. Existen dos tipos principales de deformación: deformación
+            elástica y deformación plástica. La deformación elástica es reversible y el material vuelve a su forma
+            original una vez que se retiran las fuerzas aplicadas, mientras que la deformación plástica es irreversible
+            y el material conserva la nueva forma incluso después de retirar las fuerzas (Callister & Rethwisch, 2018).
+        </p>
+        <p>La deformación se puede medir utilizando diferentes parámetros, como la deformación unitaria, que es la
+            relación entre el cambio en la longitud de un material y su longitud original. La deformación unitaria se
+            expresa como ε = ΔL / L, donde ε es la deformación unitaria, ΔL es el cambio en la longitud y L es la
+            longitud original del material (Callister & Rethwisch, 2018).</p>
+        <p>La deformación también se puede describir en términos de esfuerzo, que es la fuerza aplicada por unidad de
+            área. El esfuerzo se calcula como σ = F / A, donde σ es el esfuerzo, F es la fuerza aplicada y A es el área
+            transversal sobre la cual se aplica la fuerza. La relación entre el esfuerzo y la deformación se describe
+            por la ley de Hooke en el rango elástico de un material, como se mencionó anteriormente (Callister &
+            Rethwisch, 2018).</p>
+        <p>En ingeniería, la deformación es un parámetro crítico para el diseño de estructuras y componentes. Comprender
+            cómo los materiales se deforman bajo cargas externas es esencial para garantizar la integridad y la
+            seguridad de las estructuras. Los ingenieros utilizan pruebas de deformación, como ensayos de tracción,
+            compresión y flexión, para evaluar las propiedades mecánicas de los materiales y predecir su comportamiento
+            bajo diferentes condiciones de carga (Callister & Rethwisch, 2018).</p>
+    </div>
 
     <script>
         function redirigir(ruta) {
