--- a/Temas_acustica/Esfuerzo.html
+++ b/Temas_acustica/Esfuerzo.html
@@ -38,7 +38,6 @@
             font-size: 36px;
             padding: 10px 0;
         }
-
     </style>
 </head>
 
@@ -52,6 +51,42 @@
         <a href="\Calculadora.html">Calculadora</a>
     </div>
     <div id="esfuerzo">Esfuerzo</div>
+    <div>
+        <h2>Esfuerzo</h2>
+        <p>El esfuerzo, en el ámbito de la física, se define como la magnitud física que cuantifica la fuerza aplicada
+            sobre una superficie. Se representa con la letra "σ" (sigma) y se mide en unidades de Pascal (Pa),
+            equivalentes a Newton entre metro cuadrado (N/m²).</p>
+        <p>Para comprender mejor el concepto de esfuerzo, es necesario analizarlo en conjunto con la deformación, que es
+            el cambio de forma que experimenta un objeto debido a la aplicación de una fuerza. La relación entre
+            esfuerzo y deformación depende del tipo de material y se describe mediante la ley de Hooke, que establece
+            que el esfuerzo es directamente proporcional a la deformación dentro del límite elástico del material (Sears
+            y Zemansky, 2010).</p>
+
+        <h3>Tipos de Esfuerzo:</h3>
+        <p>Existen diferentes tipos de esfuerzo, cada uno asociado a un modo de deformación específico:</p>
+        <ul>
+            <li><strong>Esfuerzo normal:</strong> Actúa perpendicularmente a la superficie del objeto y puede ser de
+                compresión (si la fuerza empuja hacia adentro) o de tracción (si la fuerza jala hacia afuera) (Beer y
+                Johnston, 2019).</li>
+            <li><strong>Esfuerzo cortante:</strong> Actúa tangencialmente a la superficie del objeto y tiende a
+                "desgarrarlo" (Avendaño y Benites, 2016).</li>
+            <li><strong>Esfuerzo tangencial:</strong> Es una combinación de esfuerzo normal y esfuerzo cortante.</li>
+        </ul>
+
+        <h3>Aplicaciones del Esfuerzo en la Ingeniería:</h3>
+        <p>El estudio del esfuerzo es fundamental en diversas ramas de la ingeniería, como la ingeniería civil, mecánica
+            y aeroespacial. Permite analizar el comportamiento de estructuras, máquinas y componentes ante cargas
+            externas, garantizando su seguridad y resistencia.</p>
+        <p><strong>Diseño de estructuras:</strong> El cálculo de esfuerzos en vigas, columnas y otros elementos
+            estructurales es crucial para asegurar la estabilidad de edificios, puentes y otras obras civiles (González
+            Carcelés, 2007).</p>
+        <p><strong>Análisis de máquinas:</strong> El estudio de esfuerzos en componentes como engranajes, ejes y
+            cojinetes es esencial para el diseño y funcionamiento eficiente de máquinas y motores (Salazar Trujillo,
+            2007).</p>
+        <p><strong>Diseño de aeronaves:</strong> La comprensión de esfuerzos en alas, fuselajes y otros componentes
+            estructurales de aeronaves es vital para garantizar su seguridad y desempeño durante el vuelo (Ballesteros
+            et al., 2018).</p>
+    </div>
 
     <script>
         function redirigir(ruta) {
