--- a/Temas_acustica/Historia_acustica.html
+++ b/Temas_acustica/Historia_acustica.html
@@ -38,7 +38,6 @@
             font-size: 36px;
             padding: 10px 0;
         }
-
     </style>
 </head>
 
@@ -52,6 +51,27 @@
         <a href="\Calculadora.html">Calculadora</a>
     </div>
     <div id="historia">Historia acústica</div>
+    <div>
+        <h2>Historia</h2>
+        <p>En la antigua Grecia, aproximadamente en el siglo VI a.C., Pitágoras realizó experimentos con cuerdas de
+            diferentes longitudes para entender la relación entre la longitud de la cuerda y el tono producido, sentando
+            así las bases para el estudio de la música y la acústica.</p>
+        <p>Durante el Renacimiento, en el siglo XV, Leonardo da Vinci investigó la propagación del sonido y su
+            influencia en la arquitectura. Sus estudios contribuyeron al entendimiento de cómo la forma y disposición de
+            los espacios afectan la calidad del sonido en lugares cerrados.</p>
+        <p>En esa misma época, el científico alemán Ernst Chladni realizó experimentos con placas de metal cubiertas de
+            arena para visualizar las vibraciones sonoras. Estos experimentos, llevados a cabo en el siglo XVIII,
+            sentaron las bases para el estudio de la resonancia y la formación de ondas acústicas.</p>
+        <p>Durante la Edad Media, músicos, compositores y arquitectos experimentaron con diferentes materiales, formas y
+            técnicas de construcción de instrumentos para mejorar la resonancia y la proyección del sonido. También
+            descubrieron la influencia de la arquitectura en la acústica de espacios cerrados como iglesias y
+            catedrales.</p>
+        <p>Hoy en día, con el avance de la tecnología, la acústica se ha convertido en una disciplina ampliamente
+            utilizada en diversos campos como la arquitectura, la música, la ingeniería de sonido y la medicina.
+            Mediante técnicas avanzadas, se busca mejorar la calidad del sonido en espacios cerrados, diseñar
+            instrumentos musicales más eficientes y realizar diagnósticos médicos más precisos. La investigación en
+            acústica continúa siendo dinámica, con constantes avances y descubrimientos.</p>
+    </div>
 
     <script>
         function redirigir(ruta) {
