--- a/Temas_acustica/Ley_de_hooke.html
+++ b/Temas_acustica/Ley_de_hooke.html
@@ -38,7 +38,6 @@
             font-size: 36px;
             padding: 10px 0;
         }
-
     </style>
 </head>
 
@@ -52,6 +51,32 @@
         <a href="\Calculadora.html">Calculadora</a>
     </div>
     <div id="ley">Ley de Hooke</div>
+    <div>
+        <h2>Ley de Hooke</h2>
+        <p>La Ley de Hooke, también conocida como la Ley de Hooke, es un principio fundamental en la física que describe
+            el comportamiento de resortes y otros materiales elásticos. Nombrada en honor al físico inglés Robert Hooke,
+            quien formuló por primera vez la ley en 1676, establece que la fuerza necesaria para extender o comprimir un
+            resorte por cierta distancia es proporcional a esa distancia (Hooke, 1678). Matemáticamente, esto se puede
+            expresar como:</p>
+        <p>F = -kx</p>
+        <p>Donde F es la fuerza aplicada, k es la constante del resorte, y x es el desplazamiento desde la posición de
+            equilibrio.</p>
+
+        <p>La Ley de Hooke tiene aplicaciones importantes en varios campos, incluyendo la ingeniería, la física y la
+            ciencia de materiales. Por ejemplo, en ingeniería, la Ley de Hooke se utiliza para diseñar y analizar
+            sistemas de resortes, como los que se encuentran en las suspensiones de automóviles, relojes y válvulas. En
+            física, se utiliza para estudiar las propiedades de los materiales y el comportamiento de las ondas. Y en la
+            ciencia de materiales, se utiliza para comprender el comportamiento elástico de los materiales y la relación
+            entre su estructura y propiedades (Feynman, Leighton, & Sands, 1963).</p>
+
+        <p>Una de las características clave de la Ley de Hooke es su linealidad, lo que significa que la relación entre
+            la fuerza y el desplazamiento es una línea recta. Esto la convierte en un modelo simple y útil para estudiar
+            el comportamiento elástico, ya que permite cálculos y predicciones sencillas. Sin embargo, es importante
+            tener en cuenta que la Ley de Hooke solo se aplica a pequeños desplazamientos, y que el comportamiento de
+            los resortes y otros materiales elásticos puede volverse más complejo en desplazamientos más grandes
+            (Serway, Faughn, & Vuille, 2008). Su simplicidad y generalidad la han convertido en un concepto fundamental
+            en la física y la ingeniería, y sigue siendo objeto de investigación e investigación continua.</p>
+    </div>
 
     <script>
         function redirigir(ruta) {
