--- a/Temas_acustica/Ley_inverso.html
+++ b/Temas_acustica/Ley_inverso.html
@@ -38,7 +38,6 @@
             font-size: 36px;
             padding: 10px 0;
         }
-
     </style>
 </head>
 
@@ -52,6 +51,24 @@
         <a href="\Calculadora.html">Calculadora</a>
     </div>
     <div id="inverso">Ley inverso del cuadrado para la intensidad</div>
+    <div>
+        <h2>Ley del Inverso del Cuadrado para la Intensidad</h2>
+        <p>La ley del inverso del cuadrado describe cómo la intensidad de ciertos fenómenos físicos disminuye de manera
+            inversamente proporcional al cuadrado de la distancia al centro de la fuente. Esta ley se aplica a diversos
+            campos, como la gravedad, el campo eléctrico, la luz, el sonido y la radiación.</p>
+        <p>En términos generales, la intensidad de la influencia en cualquier radio dado "r" es la intensidad de la
+            fuente en el origen dividida por el área de la esfera que rodea la fuente, lo que resulta en una disminución
+            rápida de la intensidad a medida que nos alejamos de la fuente (HyperPhysics).</p>
+        <p>La ley del inverso del cuadrado se basa en consideraciones geométricas y se aplica a fuentes puntuales que
+            extienden su influencia en todas las direcciones por igual, sin límite de alcance. Por ejemplo, en el caso
+            del campo gravitatorio, la aceleración de la gravedad es una expresión de la intensidad del campo
+            gravitatorio y sigue esta ley. De manera similar, el campo eléctrico de una carga puntual y la fuerza
+            eléctrica en la ley de Coulomb también obedecen la ley del inverso del cuadrado (HyperPhysics).</p>
+        <p>En el contexto del sonido, la intensidad del sonido proveniente de una fuente puntual también sigue la ley
+            del inverso del cuadrado. Esto significa que la intensidad del sonido disminuye rápidamente a medida que nos
+            alejamos de la fuente, lo que tiene implicaciones importantes en la acústica y el diseño de espacios como
+            auditorios (HyperPhysics).</p>
+    </div>
 
     <script>
         function redirigir(ruta) {
