--- a/Temas_acustica/Movimiento_ondulatorio.html
+++ b/Temas_acustica/Movimiento_ondulatorio.html
@@ -38,7 +38,6 @@
             font-size: 36px;
             padding: 10px 0;
         }
-
     </style>
 </head>
 
@@ -52,6 +51,80 @@
         <a href="\Calculadora.html">Calculadora</a>
     </div>
     <div id="movimiento_ondulatorio">Movimiento ondulatorio</div>
+    <div>
+        <h2>Movimiento Ondulatorio</h2>
+        <h3>Descripción Matemática del Movimiento Ondulatorio</h3>
+        <p>La descripción matemática del movimiento ondulatorio se basa en la ecuación de onda, que describe la relación
+            entre la desviación de la onda, la velocidad, la frecuencia y la longitud de onda. Según la ecuación de
+            onda, la desviación de la onda (y) es una función del tiempo (t) y la posición (x) (Crawford, 2012).</p>
+        <p>La ecuación de onda se puede expresar como:</p>
+        <p>y(x,t) = A sin (kx - ωt)</p>
+        <p>donde A es la amplitud de la onda, k es el número de onda, y ω es la frecuencia angular (Crawford, 2012). El
+            número de onda (k) está relacionado con la longitud de onda (λ) de la onda por la ecuación k = 2π/λ, y la
+            frecuencia angular (ω) está relacionada con la frecuencia (f) de la onda por la ecuación ω = 2πf (Crawford,
+            2012).</p>
+
+        <h3>Tipos de Ondas</h3>
+        <p>Existen dos tipos principales de ondas: mecánicas y electromagnéticas. Las ondas mecánicas requieren un medio
+            para propagarse, mientras que las ondas electromagnéticas no (Serway & Jewett, 2018).</p>
+        <p>Las ondas mecánicas pueden clasificarse además en ondas transversales y longitudinales. Las ondas
+            transversales implican la oscilación de partículas perpendicularmente a la dirección de propagación de la
+            onda, mientras que las ondas longitudinales implican la oscilación de partículas paralelamente a la
+            dirección de propagación de la onda (Serway & Jewett, 2018).</p>
+
+        <p>Las ondas electromagnéticas, por otro lado, no requieren un medio para propagarse e incluyen la luz visible,
+            las ondas de radio y los rayos X (Serway & Jewett, 2018). Las ondas electromagnéticas se caracterizan por su
+            frecuencia y longitud de onda, que determinan su energía y comportamiento (Serway & Jewett, 2018).</p>
+
+        <h3>Aplicaciones del Movimiento Ondulatorio</h3>
+        <p>El movimiento ondulatorio tiene importantes implicaciones en varios campos, incluyendo la física, la
+            ingeniería y la biología. En física, el movimiento ondulatorio es esencial para entender el comportamiento
+            de la luz, el sonido y otras formas de energía (Serway & Jewett, 2018).</p>
+        <p>En ingeniería, el movimiento ondulatorio se utiliza en el diseño de sistemas de comunicación, como la
+            radiodifusión y la televisión, y en el desarrollo de tecnologías de imágenes médicas, como el ultrasonido y
+            la resonancia magnética (Serway & Jewett, 2018).</p>
+        <p>En biología, el movimiento ondulatorio es fundamental para entender el comportamiento de células, tejidos y
+            órganos (Boron & Boulpaep, 2019). Por ejemplo, el movimiento ondulatorio de iones a través de membranas
+            celulares es crucial en la generación de impulsos nerviosos y la regulación del latido cardíaco (Boron &
+            Boulpaep, 2019).</p>
+    </div>
+    <div>
+        <h2>Movimiento Ondulatorio</h2>
+        <h2>Descripción Matemática del Movimiento Ondulatorio</h2>
+        <p>La descripción matemática del movimiento ondulatorio se basa en la ecuación de onda, que describe la relación
+            entre la desviación de la onda, la velocidad, la frecuencia y la longitud de onda. Según la ecuación de
+            onda, la desviación de la onda (y) es una función del tiempo (t) y la posición (x) (Crawford, 2012).</p>
+        <p>La ecuación de onda se puede expresar como:</p>
+        <p>y(x,t) = A sin (kx - ωt)</p>
+        <p>donde A es la amplitud de la onda, k es el número de onda, y ω es la frecuencia angular (Crawford, 2012). El
+            número de onda (k) está relacionado con la longitud de onda (λ) de la onda por la ecuación k = 2π/λ, y la
+            frecuencia angular (ω) está relacionada con la frecuencia (f) de la onda por la ecuación ω = 2πf (Crawford,
+            2012).</p>
+
+        <h2>Tipos de Ondas</h2>
+        <p>Existen dos tipos principales de ondas: mecánicas y electromagnéticas. Las ondas mecánicas requieren un medio
+            para propagarse, mientras que las ondas electromagnéticas no (Serway & Jewett, 2018).</p>
+        <p>Las ondas mecánicas pueden clasificarse además en ondas transversales y longitudinales. Las ondas
+            transversales implican la oscilación de partículas perpendicularmente a la dirección de propagación de la
+            onda, mientras que las ondas longitudinales implican la oscilación de partículas paralelamente a la
+            dirección de propagación de la onda (Serway & Jewett, 2018).</p>
+
+        <p>Las ondas electromagnéticas, por otro lado, no requieren un medio para propagarse e incluyen la luz visible,
+            las ondas de radio y los rayos X (Serway & Jewett, 2018). Las ondas electromagnéticas se caracterizan por su
+            frecuencia y longitud de onda, que determinan su energía y comportamiento (Serway & Jewett, 2018).</p>
+
+        <h2>Aplicaciones del Movimiento Ondulatorio</h2>
+        <p>El movimiento ondulatorio tiene importantes implicaciones en varios campos, incluyendo la física, la
+            ingeniería y la biología. En física, el movimiento ondulatorio es esencial para entender el comportamiento
+            de la luz, el sonido y otras formas de energía (Serway & Jewett, 2018).</p>
+        <p>En ingeniería, el movimiento ondulatorio se utiliza en el diseño de sistemas de comunicación, como la
+            radiodifusión y la televisión, y en el desarrollo de tecnologías de imágenes médicas, como el ultrasonido y
+            la resonancia magnética (Serway & Jewett, 2018).</p>
+        <p>En biología, el movimiento ondulatorio es fundamental para entender el comportamiento de células, tejidos y
+            órganos (Boron & Boulpaep, 2019). Por ejemplo, el movimiento ondulatorio de iones a través de membranas
+            celulares es crucial en la generación de impulsos nerviosos y la regulación del latido cardíaco (Boron &
+            Boulpaep, 2019).</p>
+    </div>
 
     <script>
         function redirigir(ruta) {
