--- a/Temas_acustica/Sonido.html
+++ b/Temas_acustica/Sonido.html
@@ -38,7 +38,6 @@
             font-size: 36px;
             padding: 10px 0;
         }
-
     </style>
 </head>
 
@@ -52,6 +51,38 @@
         <a href="\Calculadora.html">Calculadora</a>
     </div>
     <div id="sonido">Sonido</div>
+    <div>
+        <h2>Sonido</h2>
+        <p>El sonido es una forma de energía que resulta de la vibración de partículas en un medio, típicamente aire. En
+            física, el estudio del sonido implica comprender las propiedades de las ondas sonoras, su propagación y cómo
+            interactúan con el entorno. Este ensayo profundizará en los conceptos fundamentales del sonido desde un
+            punto de vista físico, cubriendo temas como las ondas sonoras, la amplitud, el tono y la resonancia.</p>
+
+        <h2>Ondas Sonoras</h2>
+        <p>Las ondas sonoras son ondas longitudinales que se propagan a través de un medio al hacer que las partículas
+            en el medio oscilen paralelas a la dirección del viaje de la onda (Rossing et al., 2007). Estas ondas
+            consisten en compresiones y rarefacciones, donde las compresiones son regiones de alta presión y densidad, y
+            las rarefacciones son regiones de baja presión y densidad. La velocidad del sonido en un medio depende de
+            las propiedades del medio, como la temperatura y la densidad.</p>
+
+        <h2>Amplitud</h2>
+        <p>La amplitud es el desplazamiento máximo de las partículas desde su posición de equilibrio cuando una onda
+            sonora pasa a través de un medio (Rossing et al., 2007). Es una medida de la intensidad o volumen de una
+            onda sonora y está directamente relacionada con la energía transportada por la onda. Cuanto mayor sea la
+            amplitud, más fuerte será el sonido percibido por el oído humano.</p>
+
+        <h2>Tono</h2>
+        <p>El tono es el atributo perceptual del sonido que nos permite diferenciar entre sonidos de alta y baja
+            frecuencia (Rossing et al., 2007). Frecuencias más altas corresponden a tonos más altos, mientras que
+            frecuencias más bajas corresponden a tonos más bajos. El tono de una onda sonora está determinado por su
+            frecuencia, con frecuencias más altas produciendo sonidos de tono más alto y viceversa.</p>
+
+        <h2>Resonancia</h2>
+        <p>La resonancia es un fenómeno en el cual un objeto vibra a su frecuencia natural cuando se expone a una fuerza
+            externa a esa frecuencia (Rossing et al., 2007). En el contexto del sonido, la resonancia juega un papel
+            crucial en la música y los instrumentos musicales, donde ciertas frecuencias se amplifican debido a la
+            frecuencia natural del instrumento o la columna de aire dentro de él.</p>
+    </div>
 
     <script>
         function redirigir(ruta) {
