--- a/Temas_optica/Angulo_critico_y_distancia_focal.html
+++ b/Temas_optica/Angulo_critico_y_distancia_focal.html
@@ -38,7 +38,6 @@
             font-size: 36px;
             padding: 10px 0;
         }
-
     </style>
 </head>
 
@@ -52,12 +51,73 @@
         <a href="\Calculadora.html">Calculadora</a>
     </div>
     <div id="angulo_c">Ángulo crítico y distancia focal</div>
+    <div>
+        <h2>Ángulo Crítico</h2>
 
-    <script>
-        function redirigir(ruta) {
-            window.location.href = ruta;
-        }
-    </script>
+        <p>El ángulo crítico y la reflexión total se basan en los principios de la óptica y la refracción de la luz.
+            Cuando un rayo de luz se propaga a través de un medio y encuentra un cambio en la velocidad de la luz al
+            pasar a otro medio, se produce refracción. La refracción se rige por la ley de Snell, que establece la
+            relación entre los ángulos de incidencia y refracción y los índices de refracción de los medios
+            (PhysicsTutorials.org, n.d.).</p>
+
+        <div>
+            <img src="C:\Users\980022886\Downloads\ImagenesFisica\Optica\Imagen12.png" alt="Ángulo Crítico">
+            <p>(PhysicsTutorials.org, n.d.)</p>
+
+            <p>El ángulo crítico es el ángulo de incidencia en el que el rayo de luz se propaga a lo largo de la
+                interfaz entre los dos medios. Cuando el ángulo de incidencia es mayor que el ángulo crítico, se produce
+                reflexión total en lugar de refracción. Esto se debe a que la luz no puede propagarse en el medio de
+                menor índice de refracción a un ángulo menor que el ángulo crítico (PhysicsTutorials.org, n.d.).</p>
+
+            <h3>Fórmula del Ángulo Crítico:</h3>
+
+            <div>
+                <img src="C:\Users\980022886\Downloads\ImagenesFisica\Optica\Imagen13.png"
+                    alt="Fórmula del Ángulo Crítico">
+                <p>(PhysicsTutorials.org, n.d.)</p>
+            </div>
+        </div>
+
+        <div>
+            <h2>Distancia Focal</h2>
+
+            <p>La distancia focal es la distancia entre el espejo o lente y el punto focal. En el caso de un espejo, es
+                el punto donde convergen los rayos reflejados, y en el caso de una lente, es el punto donde convergen
+                los rayos refractados (Moebs et al., 2021).</p>
+
+            <p>La fórmula para calcular la distancia focal de una lente viene dada por la ecuación del fabricante de
+                lentes, que se deriva de la ecuación de la lente (Milimoreno, 2012).</p>
+
+            <p>La ecuación de la lente relaciona la distancia del objeto (do), la distancia de la imagen (di) y la
+                distancia focal (f) de una lente mediante la siguiente fórmula:</p>
+
+            <p>1/f = 1/do + 1/di</p>
+
+            <p>La ecuación del fabricante de lentes se deriva de esta fórmula y se utiliza para calcular la distancia
+                focal de una lente en función de su curvatura e índice de refracción (Milimoreno, 2012).</p>
+
+            <p>La distancia focal también se relaciona con el aumento de la imagen, que se define como la relación entre
+                la altura de la imagen y la altura del objeto. El aumento de la imagen se puede calcular utilizando la
+                siguiente fórmula: M = -di/do, donde M es el aumento de la imagen, di es la distancia de la imagen, y do
+                es la distancia del objeto. Si el aumento es positivo, la imagen es derecha y mayor que el objeto; si el
+                aumento es negativo, la imagen es invertida y menor que el objeto (Milimoreno, 2012).</p>
+
+            <p>La distancia focal también se relaciona con el ángulo de visión, que es el ángulo formado por los rayos
+                de luz que entran en la lente desde los extremos del campo visual. El ángulo de visión se puede calcular
+                utilizando la siguiente fórmula: α = 2arctan(D/2f), donde α es el ángulo de visión, D es el diámetro de
+                la lente, y f es la distancia focal. Cuanto mayor sea la distancia focal, menor será el ángulo de visión
+                y más "zoom" tendrá el objetivo (Milimoreno, 2012).</p>
+
+            <div>
+                <img src="C:\Users\980022886\Downloads\ImagenesFisica\Optica\Imagen14.png" alt="Distancia Focal">
+                <p>(By IA)</p>
+            </div>
+        </div>
+        <script>
+            function redirigir(ruta) {
+                window.location.href = ruta;
+            }
+        </script>
 </body>
 
 </html>
