--- a/Temas_optica/Angulo_de_brewster.html
+++ b/Temas_optica/Angulo_de_brewster.html
@@ -38,7 +38,6 @@
             font-size: 36px;
             padding: 10px 0;
         }
-
     </style>
 </head>
 
@@ -52,7 +51,34 @@
         <a href="\Calculadora.html">Calculadora</a>
     </div>
     <div id="angulo_de_b">Ángulo de Brewster</div>
+    <div>
+        <h2>Ángulo de Brewster</h2>
 
+        <p>Este ángulo tiene aplicaciones prácticas para minimizar la reflexión y diseñar sistemas ópticos con mayor
+            eficiencia y reducción del deslumbramiento. En el ángulo de Brewster, la luz reflejada se minimiza, mientras
+            que la luz transmitida está parcialmente polarizada, con su campo eléctrico oscilando tanto paralelo como
+            perpendicular a la superficie (Sme, 2024).</p>
+
+        <p>La fórmula para el ángulo de Brewster se puede derivar considerando el comportamiento de las ondas
+            electromagnéticas en el límite entre dos medios. Cuando una onda electromagnética encuentra un límite, puede
+            reflejarse parcialmente y transmitirse parcialmente, y los coeficientes de reflexión y transmisión dependen
+            del ángulo de incidencia y los índices de refracción de los medios involucrados (Sme, 2024).</p>
+
+        <p>En fibra óptica el ángulo de Brewster también es relevante. Se utiliza en el diseño de fibras ópticas para
+            minimizar los reflejos y aumentar la eficiencia de la transmisión de luz (Sme, 2024).</p>
+
+        <div>
+            <img src="C:\Users\980022886\Downloads\ImagenesFisica\Optica\Imagen15.png" alt="Ángulo de Brewster">
+            <p><em>(Sme, 2024)</em></p>
+        </div>
+
+        <p><strong>Donde:</strong></p>
+        <ul>
+            <li>i es el ángulo de Brewster.</li>
+            <li>n1 es el índice de refracción del medio incidente.</li>
+            <li>n2 es el índice de refracción del medio refractado.</li>
+        </ul>
+    </div>
     <script>
         function redirigir(ruta) {
             window.location.href = ruta;
