--- a/Temas_optica/Dispersion_de_la_luz.html
+++ b/Temas_optica/Dispersion_de_la_luz.html
@@ -38,7 +38,6 @@
             font-size: 36px;
             padding: 10px 0;
         }
-
     </style>
 </head>
 
@@ -52,7 +51,28 @@
         <a href="\Calculadora.html">Calculadora</a>
     </div>
     <div id="dispersion">Dispersión de la luz</div>
-
+    <div class="contenido">
+        <h2>Difracción de la luz</h2>
+        <p>La difracción de la luz se refiere a la curvatura o dispersión de ondas de luz cuando pasan a través de una
+            abertura o alrededor del borde de un objeto, lo que resulta en una distorsión visible del camino de la luz.
+            Este fenómeno fue descubierto por primera vez por el físico y astrónomo italiano Francesco Grimaldi a
+            mediados del siglo XVI, quien lo denominó "difracción" porque la luz emitida por una fuente se separa en
+            fracciones cuando se interpone un cuerpo opaco.</p>
+        <p>Cuando la luz pasa a través de una abertura estrecha o alrededor del borde de un objeto, las ondas se curvan
+            y se extienden, creando un patrón de áreas brillantes y oscuras. Esto se debe al hecho de que las ondas de
+            luz interfieren entre sí, ya sea de forma constructiva o destructiva, dependiendo de su relación de fase. La
+            cantidad de curvatura que se produce depende del tamaño de la apertura o del objeto en relación con la
+            longitud de onda de la luz. Cuando la apertura es grande, la cantidad de difracción puede ser
+            insignificante, pero cuando es pequeña, el efecto se puede ver fácilmente a simple vista.</p>
+        <p>Los efectos de la luz difractada suelen aparecer como bandas de diferente brillo o color, provocadas por la
+            interferencia de las ondas de luz. La difracción es un concepto fundamental en óptica y tiene muchas
+            aplicaciones prácticas, como en el diseño de instrumentos ópticos y el estudio de fenómenos ondulatorios.
+            También está muy relacionado con el fenómeno de la interferencia, que se produce cuando dos o más ondas de
+            luz se superponen e interactúan entre sí.</p>
+        <!-- Aquí puedes colocar tu imagen y su referencia -->
+        <img src="C:\Users\980022886\Downloads\ImagenesFisica\Optica\Imagen9.png" alt="Prisma">
+        <p>(Leskow, 2022)</p>
+    </div>
     <script>
         function redirigir(ruta) {
             window.location.href = ruta;
