--- a/Temas_optica/Dispositivos_iniciales_y_luz_de_fibras_opticas.html
+++ b/Temas_optica/Dispositivos_iniciales_y_luz_de_fibras_opticas.html
@@ -38,7 +38,6 @@
             font-size: 36px;
             padding: 10px 0;
         }
-
     </style>
 </head>
 
@@ -52,6 +51,35 @@
         <a href="\Calculadora.html">Calculadora</a>
     </div>
     <div id="dispositivos">Dispositivos iniciales y luz de fibras ópticas</div>
+    <div>
+        <h2>Fibras Ópticas</h2>
+
+        <p>La fibra óptica es una guía de onda dieléctrica que opera en frecuencias ópticas, utilizada para transmitir
+            información a través de pulsos de luz (Sheldon, n.d.). Está hecha de un hilo diminuto, flexible y
+            transparente de vidrio o polímeros, y puede estar compuesta por un núcleo central rodeado por un
+            revestimiento con un índice de refracción más bajo. La luz se propaga a través del núcleo mediante el
+            principio de reflexión interna total, lo que permite que la luz se mantenga atrapada y se propague dentro
+            del núcleo (Unam, P. 2024).</p>
+
+        <p>La fibra óptica se utiliza principalmente para la comunicación, ya que ofrece una pérdida de transmisión de
+            información mucho menor que la de la electricidad en los cables. Además, el vidrio de cuarzo de alta pureza
+            utilizado en la fibra óptica es abundante y fácil de extraer, lo que la hace asequible y eficiente (Unam, P.
+            2024).</p>
+
+        <p>Existen diferentes tipos de fibras ópticas, como las fibras monomodales y multimodales, que se diferencian en
+            el número de modos de luz que pueden propagarse a través del núcleo (Equipo editorial, Etecé, 2021). Las
+            fibras monomodales permiten la propagación de un único modo de luz, lo que las hace adecuadas para la
+            transmisión a largas distancias y a altas velocidades (Equipo editorial, Etecé, 2021). Por otro lado, las
+            fibras multimodales permiten la propagación de múltiples modos de luz, lo que las hace adecuadas para
+            aplicaciones donde se requiere una mayor capacidad de transmisión de datos.</p>
+
+        <p>La fibra óptica se utiliza en diversas aplicaciones, como la creación de redes informáticas locales y de
+            largo alcance, la transmisión de señales de televisión y radio, y la medición de variables físicas como la
+            temperatura, la presión y los niveles de luz (Equipo editorial, Etecé, 2021).</p>
+
+        <img src="C:\Users\980022886\Downloads\ImagenesFisica\Optica\Imagen17.png" alt="Fibras Ópticas">
+        <p>(By IA)</p>
+    </div>
 
     <script>
         function redirigir(ruta) {
