--- a/Temas_optica/Fenomenos_de_luminiscencia.html
+++ b/Temas_optica/Fenomenos_de_luminiscencia.html
@@ -38,7 +38,6 @@
             font-size: 36px;
             padding: 10px 0;
         }
-
     </style>
 </head>
 
@@ -52,7 +51,48 @@
         <a href="\Calculadora.html">Calculadora</a>
     </div>
     <div id="fenomenos">Fenómenos de luminiscencia</div>
+    <div>
+        <h2>Fenómenos de Luminiscencia</h2>
 
+        <img src="C:\Users\980022886\Downloads\ImagenesFisica\Optica\Imagen18.png" alt="Fenómenos de Luminiscencia">
+        <p>(PCC Group, 2023)</p>
+
+        <p>La luminiscencia es la emisión de luz por un objeto que no está provocada por altas temperaturas, lo que la
+            distingue de la incandescencia. Es un fenómeno de radiación no térmica que ocurre cuando las moléculas pasan
+            de un estado excitado a un estado básico, liberando radiación como resultado (PCC Group, 2023).</p>
+
+        <p>Existen diferentes tipos de luminiscencia, clasificadas según el factor que las excita a emitir luz. Los
+            tipos más comunes son:</p>
+
+        <ol>
+            <li><strong>Fotoluminiscencia:</strong> El factor de excitación es la radiación electromagnética en el
+                espectro visible, ultravioleta o infrarrojo. La energía emitida, en forma de luz, suele ser inferior a
+                la energía de excitación (PCC Group, 2023).</li>
+            <li><strong>Quimioluminiscencia:</strong> Una sustancia se excita mediante reacciones químicas, como la
+                oxidación del luminol, que se utiliza para la detección de sangre en la escena del crimen. La excitación
+                se consigue pulverizando sobre la escena una mezcla de luminol y peróxido de hidrógeno, un agente
+                oxidante (PCC Group, 2023).</li>
+            <li><strong>Bioluminiscencia:</strong> Se caracteriza por la excitación de sustancias debido a reacciones
+                bioquímicas, como las que se observan en las luciérnagas. Este tipo de emisión es causada por una
+                reacción bioquímica que conduce a la oxidación de la luciferina por la luciferasa (PCC Group, 2023).
+            </li>
+            <li><strong>Electroluminiscencia:</strong> La excitación de un sólido tiene lugar en un campo eléctrico
+                alterno o constante, mientras que los gases experimentan electroluminiscencia bajo descargas eléctricas.
+                Este fenómeno se utiliza en lámparas fluorescentes, condensadores electroluminiscentes y convertidores
+                de imágenes (PCC Group, 2023).</li>
+            <li><strong>Luminiscencia de rayos X:</strong> Es la emisión de luz provocada por los rayos X. Este fenómeno
+                se utiliza en pantallas para mejorar la calidad de las imágenes, como las que se utilizan en imágenes
+                médicas (PCC Group, 2023).</li>
+        </ol>
+
+        <p>La luminiscencia se utiliza en diversas aplicaciones, incluida la terapia contra el cáncer (terapia
+            fotodinámica), la cuantificación de la calidad de la leche, la detección de sustancias ilícitas,
+            aplicaciones forenses (por ejemplo, la detección de rastros de sangre), el desarrollo de nuevos tintes
+            láser, sensores de gas neurológico, sensores de armas químicas, sensores para evaluar la calidad y frescura
+            de la carne para consumo humano, detección de metales pesados en fuentes de agua potable, marcado de tumores
+            para procedimientos quirúrgicos, imágenes celulares, como componentes de pantallas de teléfonos celulares, y
+            muchos otros (PCC Group, 2023).</p>
+    </div>
     <script>
         function redirigir(ruta) {
             window.location.href = ruta;
