--- a/Temas_optica/Laseres.html
+++ b/Temas_optica/Laseres.html
@@ -38,7 +38,6 @@
             font-size: 36px;
             padding: 10px 0;
         }
-
     </style>
 </head>
 
@@ -52,6 +51,42 @@
         <a href="\Calculadora.html">Calculadora</a>
     </div>
     <div id="laseres">Láseres</div>
+    <div>
+        <h2>Láseres</h2>
+
+        <p>Los láseres, acrónimo de "Light Amplification by Stimulated Emission of Radiation" (Amplificación de Luz por
+            Emisión Estimulada de Radiación), son dispositivos que generan un haz de luz coherente y de alta intensidad
+            mediante un proceso de emisión estimulada. Desde su invención en 1960, los láseres han revolucionado
+            numerosos campos, desde la medicina hasta las comunicaciones.</p>
+
+        <img src="C:\Users\980022886\Downloads\ImagenesFisica\Optica\Imagen16.png" alt="Láseres">
+        <p>(By IA)</p>
+
+        <p>Los láseres funcionan mediante la emisión estimulada de fotones, donde los átomos o moléculas excitados
+            emiten fotones idénticos en términos de fase, frecuencia y dirección. Este proceso de emisión estimulada se
+            produce en un medio activo, que puede ser sólido, líquido o gaseoso, y está confinado entre dos espejos que
+            forman la cavidad láser (Siegman, 1986).</p>
+
+        <p>Cuando la luz viaja a través del medio activo, puede inducir una transición de los átomos o moléculas del
+            estado fundamental al estado excitado. Si un fotón adicional interactúa con un átomo o molécula excitada,
+            puede estimular la emisión de un segundo fotón idéntico al primero. Este proceso de emisión estimulada
+            produce un gran número de fotones idénticos que se refuerzan mutuamente, creando un haz de luz coherente y
+            de alta intensidad (Yariv, 1989).</p>
+
+        <p>Los láseres tienen una amplia variedad de aplicaciones en diferentes campos. En medicina, se utilizan en
+            cirugía láser, eliminación de tatuajes, corrección de la visión y terapias dermatológicas. La cirugía láser
+            se utiliza en una variedad de procedimientos, como la cirugía ocular, la cirugía cardiovascular y la cirugía
+            cancerosa (Fernández et al., 2018). La eliminación de tatuajes con láser se ha vuelto cada vez más popular,
+            ya que ofrece una forma eficaz y relativamente indolora de eliminar tatuajes (Kossida et al., 2017).</p>
+
+        <p>En la industria, los láseres se emplean en corte, soldadura, marcado y medición de precisión. Los láseres se
+            utilizan en la industria aeroespacial para cortar y dar forma a materiales compuestos y metales, mientras
+            que en la industria automotriz se utilizan para marcar piezas y componentes (Kumar, 2016).</p>
+
+        <p>En comunicaciones, los láseres son fundamentales en la transmisión de datos a través de fibras ópticas. Los
+            láseres de diodo, en particular, son ideales para este propósito debido a su pequeño tamaño, bajo costo y
+            alta eficiencia (Agrawal, 2013).</p>
+    </div>
 
     <script>
         function redirigir(ruta) {
