--- a/Temas_optica/Luz_polarizada_y_no_polarizada.html
+++ b/Temas_optica/Luz_polarizada_y_no_polarizada.html
@@ -38,7 +38,6 @@
             font-size: 36px;
             padding: 10px 0;
         }
-
     </style>
 </head>
 
@@ -52,7 +51,41 @@
         <a href="\Calculadora.html">Calculadora</a>
     </div>
     <div id="luz">Luz polarizada y no polarizada</div>
-
+    <div>
+        <p>
+            La polarización de la luz es un fenómeno que se produce cuando las ondas electromagnéticas se restringen en
+            su vibración a un solo plano. La polarización se produce naturalmente en la reflexión de la luz no
+            polarizada en una superficie, donde la luz reflejada se polariza horizontalmente debido a la preferencia de
+            refracción de la luz polarizada verticalmente en la superficie (Moebs et al., 2021).
+        </p>
+        <img src="C:\Users\980022886\Downloads\ImagenesFisica\Optica\Imagen11.png" alt="Polarizacion optica">
+        <p>(By IA)</p>
+        <p>
+            La polarización tiene aplicaciones prácticas en diversos campos, como en la tecnología de pantallas de
+            cristal líquido (LCD) y en los lentes de sol polarizados. En los televisores LCD de pantalla plana, la luz
+            polarizada se controla mediante la aplicación de voltaje a cristales líquidos, lo que permite crear patrones
+            de polarización para generar imágenes en color. Los lentes de sol polarizados, por otro lado, aprovechan la
+            polarización de la luz para reducir el resplandor de la luz reflejada por el agua o el vidrio, mejorando la
+            visión en condiciones de alta luminosidad (Lentes Polarizados | Colgafas, n.d.).
+        </p>
+        <p>
+            La polarización se puede explicar mediante la Ley de Malus, que describe cómo la intensidad de la luz
+            polarizada cambia al pasar por un filtro polarizador. La ecuación asociada a esta ley establece que la
+            intensidad de la onda polarizada es igual a la intensidad inicial multiplicada por el coseno al cuadrado del
+            ángulo entre la dirección de polarización y el eje de transmisión del filtro polarizador.
+        </p>
+        <p>
+            I = I0 * cos<sup>2</sup>(θ)
+        </p>
+        <p>
+            Donde:
+        </p>
+        <ul>
+            <li>I es la intensidad de la luz polarizada,</li>
+            <li>I0 es la intensidad inicial de la luz,</li>
+            <li>θ es el ángulo entre la dirección de polarización y el eje de transmisión del filtro polarizador.</li>
+        </ul>
+    </div>
     <script>
         function redirigir(ruta) {
             window.location.href = ruta;
