--- a/Temas_optica/Ondas_electromagneticas.html
+++ b/Temas_optica/Ondas_electromagneticas.html
@@ -38,7 +38,6 @@
             font-size: 36px;
             padding: 10px 0;
         }
-
     </style>
 </head>
 
@@ -52,7 +51,42 @@
         <a href="\Calculadora.html">Calculadora</a>
     </div>
     <div id="ondas">Ondas electromagnéticas</div>
+    <div class="contenido">
+        <h2>Ondas electromagnéticas</h2>
+        <p>Estas ondas son perturbaciones en los campos eléctricos y magnéticos que se propagan por el espacio. Resultan
+            del movimiento de cargas eléctricas y pueden viajar a través del vacío o de un medio material. Las ondas
+            electromagnéticas transportan energía y momento, que pueden transferirse a la materia cuando interactúan con
+            ella. Una característica clave de las ondas electromagnéticas es la relación entre el campo eléctrico (E) y
+            el campo magnético (B). Estos campos son siempre perpendiculares entre sí y a la dirección de propagación de
+            la onda. A medida que el campo eléctrico oscila, genera un campo magnético variable en el tiempo y
+            viceversa. Esta naturaleza autosostenible permite que las ondas electromagnéticas se propaguen a largas
+            distancias. Las ondas electromagnéticas pueden propagarse a través de diversos medios, incluidos el vacío,
+            gases, líquidos y sólidos. Las características de propagación dependen de las propiedades del medio, como su
+            permitividad y permeabilidad, así como de la frecuencia de la onda. Algunos medios pueden absorber o
+            reflejar ondas electromagnéticas, mientras que otros pueden dejarlas pasar con poca atenuación.</p>
+        <img src="C:\Users\980022886\Downloads\ImagenesFisica\Optica\Imagen10.png" alt="Onda electromagnética">
+        <p>(Tomé, 2017)</p>
+    </div>
 
+    <div class="contenido">
+        <h2>La velocidad de una onda electromagnética</h2>
+        <p>La velocidad de una onda electromagnética es la velocidad a la que se propaga a través de un medio o vacío.
+            En el vacío, la velocidad de la luz (c) es de aproximadamente 299.792 kilómetros por segundo o 186.282
+            millas por segundo. Esta velocidad permanece constante para todas las ondas electromagnéticas,
+            independientemente de su longitud de onda o frecuencia.</p>
+        <p>La longitud de onda (λ) es la distancia entre dos puntos consecutivos en la misma fase de la onda, como la
+            distancia entre dos crestas o valles. Generalmente se mide en metros, pero también se utilizan otras
+            unidades como nanómetros (nm) (Young, HD y Freedman, RA 2012).</p>
+        <p>La frecuencia (f) es el número de ciclos completos u oscilaciones de una onda que ocurren por unidad de
+            tiempo. Normalmente se mide en hercios (Hz), que representa un ciclo por segundo. La frecuencia de una onda
+            electromagnética es inversamente proporcional a su longitud de onda, lo que significa que las ondas de mayor
+            frecuencia tienen longitudes de onda más cortas y las de menor frecuencia tienen longitudes de onda más
+            largas. Esta relación se puede expresar como:</p>
+        <p>c = λ * f</p>
+        <p>donde c es la velocidad de la luz, λ es la longitud de onda y f es la frecuencia. Esta ecuación muestra que,
+            si se conocen la velocidad de la luz y la frecuencia o la longitud de onda, se puede calcular la otra
+            propiedad (Young, HD y Freedman, RA 2012).</p>
+    </div>
     <script>
         function redirigir(ruta) {
             window.location.href = ruta;
