--- a/Temas_optica/Reflexion_y_refraccion_de_la_luz.html
+++ b/Temas_optica/Reflexion_y_refraccion_de_la_luz.html
@@ -38,7 +38,6 @@
             font-size: 36px;
             padding: 10px 0;
         }
-
     </style>
 </head>
 
@@ -52,7 +51,49 @@
         <a href="\Calculadora.html">Calculadora</a>
     </div>
     <div id="reflexion">Reflexión y refracción de la luz</div>
-
+    <div id="reflexion_refraccion_luz">
+        <h2>Reflexión y Refracción de la luz</h2>
+        <p>La reflexión de la luz es un fenómeno que ocurre cuando un rayo de luz rebota sobre una superficie, mientras
+            que la refracción de la luz es el cambio de dirección del rayo de luz cuando pasa de un medio a otro con
+            diferente densidad (Diferenciador, 2020). En la reflexión, el rayo de luz se devuelve al chocar con un medio
+            diferente al que se desplaza, como ocurriría cuando se patea una pelota contra una pared. En la refracción,
+            el rayo de luz cambia su ángulo de propagación, como se puede observar en el ejemplo de un haz de luz que
+            pasa de un medio a otro transparente y cambia su dirección (Fernández, n.d.).</p>
+        <h3>Leyes de la reflexión de la luz:</h3>
+        <ol>
+            <li>El rayo incidente, el reflejado y la normal a la superficie en el punto de incidencia están en el mismo
+                plano.</li>
+            <li>El ángulo del rayo incidente y el de reflexión son iguales: θ<sub>i</sub> = θ<sub>r</sub></li>
+        </ol>
+        <p>Donde:</p>
+        <ul>
+            <li>θ<sub>i</sub> es el ángulo de incidencia (medido desde la normal a la superficie).</li>
+            <li>θ<sub>r</sub> es el ángulo de reflexión (medido desde la normal a la superficie).</li>
+        </ul>
+        <p>Esta ecuación indica que el ángulo de incidencia es igual al ángulo de reflexión, lo que significa que el
+            rayo incidente y el rayo reflejado se encuentran en el mismo plano y simétricos respecto a la normal a la
+            superficie en el punto de incidencia.</p>
+        <h3>Leyes de la refracción de la luz:</h3>
+        <ol>
+            <li>El rayo incidente, el refractado y la normal a la superficie en el punto de incidencia están en el mismo
+                plano.</li>
+            <li>La relación entre el ángulo de incidencia, el de refracción y los índices de refracción absolutos de la
+                luz en los medios 1 y 2 está marcada por la ley de Snell: n<sub>1</sub> * sin(θ<sub>1</sub>) =
+                n<sub>2</sub> * sin(θ<sub>2</sub>)</li>
+        </ol>
+        <p>Donde:</p>
+        <ul>
+            <li>n<sub>1</sub> y n<sub>2</sub> son los índices de refracción absolutos de la luz en los medios 1 y 2,
+                respectivamente.</li>
+            <li>θ<sub>1</sub> es el ángulo de incidencia.</li>
+            <li>θ<sub>2</sub> es el ángulo de refracción.</li>
+        </ul>
+        <p>La velocidad de propagación de la luz cambia en la refracción, lo que hace que el rayo se acerque o se aleje
+            de la normal. La velocidad de la luz en el vacío es c = 299 792 458 m/s, y el índice de refracción absoluto
+            de la luz en un medio se define como el cociente entre la velocidad de la luz en el vacío y la velocidad de
+            la luz en el medio: n = c / v donde n es el índice de refracción absoluto de la luz en el medio, c es la
+            velocidad de la luz en el vacío y v es la velocidad de la luz en el medio.</p>
+    </div>
     <script>
         function redirigir(ruta) {
             window.location.href = ruta;
