--- a/Temas_acustica/Conceptos_basicos.html
+++ b/Temas_acustica/Conceptos_basicos.html
@@ -38,7 +38,6 @@
             font-size: 36px;
             padding: 10px 0;
         }
-
     </style>
 </head>
 
@@ -52,6 +51,33 @@
         <a href="\Calculadora.html">Calculadora</a>
     </div>
     <div id="conceptos">Conceptos básicos</div>
+    <div>
+        <h2>Conceptos básicos</h2>
+        <h2>Propagación de Ondas</h2>
+        <p>Las ondas acústicas son ondas mecánicas que se propagan a través de un medio mediante la interacción de
+            partícula a partícula. Las partículas en el medio no se mueven con la onda, sino que oscilan de ida y vuelta
+            alrededor de sus posiciones de equilibrio. La propagación de las ondas acústicas se describe mediante la
+            ecuación de onda, que establece que la segunda derivada parcial de la presión con respecto al tiempo es
+            proporcional a la segunda derivada parcial de la presión con respecto al espacio (Kinsler et al., 2012).</p>
+
+        <h2>Presión del Sonido</h2>
+        <p>La presión del sonido es la diferencia entre la presión instantánea en un punto dado en un medio y la presión
+            ambiental. La presión del sonido es una cantidad escalar y se mide en unidades de pascal (Pa) o newtons por
+            metro cuadrado (N/m²). El oído humano es sensible a niveles de presión del sonido que van desde 0 dB hasta
+            aproximadamente 120 dB, donde 0 dB corresponde al umbral de audición (Fahy, 2014).</p>
+
+        <h2>Frecuencia</h2>
+        <p>La frecuencia es el número de ciclos de una onda acústica que pasan por un punto dado en un medio por unidad
+            de tiempo. La frecuencia se mide en unidades de hertz (Hz), donde 1 Hz es igual a un ciclo por segundo. El
+            oído humano puede percibir frecuencias que van desde aproximadamente 20 Hz hasta 20,000 Hz (Fahy, 2014).</p>
+
+        <h2>Longitud de Onda</h2>
+        <p>La longitud de onda es la distancia entre dos puntos consecutivos en un medio que están en fase entre sí. La
+            longitud de onda es inversamente proporcional a la frecuencia y se mide en unidades de metros (m) u
+            cualquier otra unidad de longitud. La longitud de onda de una onda acústica está relacionada con su
+            frecuencia y la velocidad del sonido en el medio a través de la ecuación λ = c/f, donde λ es la longitud de
+            onda, c es la velocidad del sonido, y f es la frecuencia (Kinsler et al., 2012).</p>
+    </div>
 
     <script>
         function redirigir(ruta) {
