--- a/Videos.html
+++ b/Videos.html
@@ -66,13 +66,23 @@
                             </div>
                         </div>
                         <div class="col-sm-12 col-md-6 col-lg-4" style="border-style: none;">
-                            <div class="card clean-card text-center"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube-nocookie.com/embed/f1Cx54yr_hE" style="height: 200px;"></iframe>
+                            <div class="card clean-card text-center">
+                                <iframe allowfullscreen="" frameborder="0" src="https://www.youtube-nocookie.com/embed/qcq13_3g9BM" style="height: 200px;"></iframe>
                                 <div class="card-body info">
                                     <h4 class="card-title">Video 3</h4>
-                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                                    <p class="card-text">Refracción y reflexión de la luz</p>
                                 </div>
                             </div>
                         </div>
+                        <div class="col-sm-12 col-md-6 col-lg-4" style="border-style: none;">
+                            <div class="card clean-card text-center">
+                                <iframe allowfullscreen="" frameborder="0" src="https://www.youtube-nocookie.com/embed/CsMRnoFDCMc" style="height: 200px;"></iframe>
+                                <div class="card-body info">
+                                    <h4 class="card-title">Video 4</h4>
+                                    <p class="card-text">Polarización</p> 
+                                </div>
+                            </div>
+                        </div>                                               
                     </div>
                 </div>
             </section>
